@@ -61,9 +61,15 @@ def _TEMPL(template):
 def _interpolate(expr, typeobj):
     
     expr = expr.replace('{xtc-config}', 'cfg')
+    expr = expr.replace('@config', 'cfg')
     expr = expr.replace('{type}.', typeobj.name+"::")
+    expr = expr.replace('@type.', typeobj.name+"::")
     expr = expr.replace('{self}.', "this->")
+    expr = expr.replace('@self.', "this->")
     return expr
+
+def _hasconfig(str):
+    return '{xtc-config}' in str or '@config' in str
 
 def _typename(type):
     
@@ -181,7 +187,7 @@ class CppTypeCodegen ( object ) :
                 # non-value types also get copy constructor (possibly disabled), and disabled assignment
                 _sizeof = self._type.lookup('_sizeof', Method)
                 sizestr = str(self._type.size)
-                if _sizeof is None or '{xtc-config}' in sizestr:
+                if _sizeof is None or _hasconfig(sizestr):
                     access = self._access('private', access)
                     print >>self._inc, T("  $name(const $name&);")[self._type]
                     print >>self._inc, T("  $name& operator=(const $name&);")[self._type]
@@ -401,9 +407,7 @@ class CppTypeCodegen ( object ) :
         elif attr.type.variable:
             
             # _sizeof may need config
-            sizeofCfg = ''
-            if str(attr.type.size).find('{xtc-config}') >= 0: 
-                sizeofCfg = '{xtc-config}'
+            sizeofCfg = '@config' if _hasconfig(str(attr.type.size)) else ''
                 
             typename = _typename(attr.type)
             body = T("const char* memptr = ((const char*)this)+$offset;")[attr]
@@ -420,9 +424,7 @@ class CppTypeCodegen ( object ) :
                 idxexpr = idxexpr*attr.shape.dims[i] + ExprVal('i%d'%i, self._type)
                 
             # _sizeof may need config
-            sizeofCfg = ''
-            if str(attr.type.size).find('{xtc-config}') >= 0: 
-                sizeofCfg = '{xtc-config}'
+            sizeofCfg = '@config' if _hasconfig(str(attr.type.size)) else ''
 
             typename = _typename(attr.type)
             body = T("ptrdiff_t offset=$offset;")[attr]
@@ -436,7 +438,7 @@ class CppTypeCodegen ( object ) :
         """ Generate method, both declaration and definition, given the body of the method"""
         
         # guess if we need to pass cfg object to method
-        cfgNeeded = body and body.find('{xtc-config}') >= 0
+        cfgNeeded = body and _hasconfig(body)
         if body: body = _interpolate(body, self._type)
 
         configs = [None]
