@@ -12,6 +12,10 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 2013-11-08 Andy Salnikov  (on branch V00-11-00-hddl)
+- in parser substitute new tag names with internal tag names
+- generators now understand @self, @config, etc.
+
+2013-11-08 Andy Salnikov  (on branch V00-11-00-hddl)
 - fix test
 
 2013-11-08 Andy Salnikov  (on branch V00-11-00-hddl)
